--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="base_url">https://rickandmortyapi.com/api/</string>
     <string name="network_error">No internet connection</string>
     <string name="generic_error">Something went wrong. Please try again later</string>
-    <string name="loading">Loading...</string>
+    <string name="loading">Loading…</string>
 </resources>
